--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         </div>
         <p>Structured London session range breakouts with session filters, pending-order safety, and validator-clean logic.</p>
         <div class="btns">
-          <a class="btn" href="#" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP_London_Breakout/" >Docs</a>
+          <a class="btn" href="https://www.mql5.com/en/market/product/148680" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn ghost" href="./London%20Session%20Breakout/">Docs</a>
+
         </div>
       </div>
 
