--- a/insidebar-breakout/index.html
+++ b/insidebar-breakout/index.html
@@ -66,6 +66,7 @@
         <img src="./ReportTester-11619737.png" alt="Tester chart 7" />
         <img src="./ReportTester-11619738.png" alt="Tester chart 8" />
         <img src="./ReportTester-11619741.png" alt="Tester chart 9" />
+        <img src="./ReportTester-11619742.png" alt="Tester chart 10" />
       </div>
       <p class="muted" style="margin-top:8px">Add or remove images by placing PNGs in this folder and referencing them here.</p>
     </div>
