--- a/insidebar-breakout/index.html
+++ b/insidebar-breakout/index.html
@@ -23,6 +23,10 @@
   </style>
 </head>
 <body>
+  <nav style="margin:16px 0">
+  <a href="../">← Back</a> &nbsp; · &nbsp;
+  <a href="/ap-tools/">Home</a>
+</nav>
   <div class="wrap">
     <header style="display:flex;justify-content:space-between;align-items:center;margin-bottom:16px">
       <div>
