--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </div>
         <p>Inside-bar detection with smart pending placement and automatic opposite-side cleanup after fills.</p>
         <div class="btns">
-          <a class="btn" href="#" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP_InsideBar_Breakout/">Docs</a>
+          <a class="btn" href="https://www.mql5.com/en/market/product/148713" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn ghost" href="./insidebar-breakout/">Docs</a>
         </div>
       </div>
 
