--- a/insidebar-breakout/index.html
+++ b/insidebar-breakout/index.html
@@ -40,7 +40,7 @@
       <div class="card">
         <h3>What it does</h3>
         <p class="muted">Detects inside bars and places pending orders with your buffer. SL can be on the opposite side; TP can be a fixed R multiple. Unfilled pendings auto-cancel the same day to keep things clean.</p>
-        <a class="btn" href="tester.html" target="_blank" rel="noopener">Open Strategy Tester Report</a>
+        <a class="btn" href="https://www.mql5.com/en/market/product/148713" target="_blank" rel="noopener">Get on MQL5</a>
       </div>
 
       <div class="card">
