--- a/index.html
+++ b/index.html
@@ -89,21 +89,20 @@
         <p>Previous-day range breakout with buffered pending orders and built-in safety checks.</p>
         <div class="btns">
           <!-- TODO: add product ID -->
-          <a class="btn" href="https://www.mql5.com/en/market/product/REPLACE_PREV_DAY_BREAKOUT_ID" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn" href="https://www.mql5.com/en/market/product/148688" target="_blank" rel="noopener">Get on MQL5</a>
           <a class="btn ghost" href="./AP%20Previous%20Day%20Breakout/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
 
       <div class="card">
-        <h3>AP Breakout Box (EA)</h3>
-        <div class="tags"><span class="tag">EA</span><span class="tag">Time-box</span></div>
-        <p>Time-box breakout with fixed/floating buffers and optional trend filter.</p>
-        <div class="btns">
-          <!-- TODO: add product ID -->
-          <a class="btn" href="https://www.mql5.com/en/market/product/REPLACE_BREAKOUT_BOX_ID" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP_BreakoutBox_EA/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+  <h3>AP Asian Breakout Box (MT5)</h3>
+  <div class="tags"><span class="tag">EA</span><span class="tag">Time-box</span></div>
+  <p>Asian session time-box breakout with configurable hours, buffered pending orders, and optional trend filter.</p>
+  <div class="btns">
+    <a class="btn" href="https://www.mql5.com/en/market/product/148555" target="_blank" rel="noopener">Get on MQL5</a>
+    <a class="btn ghost" href="./Asian%20Breakout%20Box/" target="_blank" rel="noopener">Docs</a>
+  </div>
+</div>
 
       <div class="card">
         <h3>AP Trade Manager (Lite)</h3>
@@ -111,7 +110,7 @@
         <p>Compact trade manager with break-even, partials, and quick-close actions.</p>
         <div class="btns">
           <!-- TODO: add product ID -->
-          <a class="btn" href="https://www.mql5.com/en/market/product/REPLACE_TRADE_MANAGER_ID" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn" href="https://www.mql5.com/en/market/product/148619" target="_blank" rel="noopener">Get on MQL5</a>
           <a class="btn ghost" href="./AP%20Trade%20Manager/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
