--- a/index.html
+++ b/index.html
@@ -132,25 +132,22 @@
     <div class="grid">
       <!-- existing two -->
       <div class="card">
-        <h3>AP Session Boxes</h3>
-        <div class="tags"><span class="tag">Indicator</span><span class="tag">Sessions</span></div>
-        <p>Clean London/NY/Asia session boxes with custom times, opacity, and lookback. Great for screenshots.</p>
-        <div class="btns">
-          <a class="btn" href="./AP_Session_Boxes/" target="_blank" rel="noopener">Download</a>
-          <a class="btn ghost" href="./AP_Session_Boxes/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+        <!-- AP Session Boxes -->
+<div class="btns">
+  <!-- Free download via MQL5 -->
+  <a class="btn" href="https://www.mql5.com/en/market/product/2894" target="_blank" rel="noopener">Download</a>
+  <!-- Docs on GitHub -->
+  <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/AP_Session_Boxes" target="_blank" rel="noopener">Docs</a>
+</div>
 
-      <div class="card">
-        <h3>Candle Countdown</h3>
-        <div class="tags"><span class="tag">Indicator</span><span class="tag">Utility</span></div>
-        <p>Minimal candle time-left display that respects chart theme and stays light on resources.</p>
-        <div class="btns">
-          <a class="btn" href="./candle_count_down/" target="_blank" rel="noopener">Download</a>
-          <a class="btn ghost" href="./candle_count_down/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
-
+<!-- Candle Countdown (your MQL5 name: Pro Countdown Candle) -->
+<div class="btns">
+  <!-- Free download via MQL5 -->
+  <a class="btn" href="https://www.mql5.com/en/market/product/5365" target="_blank" rel="noopener">Download</a>
+  <!-- Docs on GitHub (note the encoded space) -->
+  <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/candle%20count%20down" target="_blank" rel="noopener">Docs</a>
+</div>
+        
       <!-- more freebies -->
       <div class="card">
         <h3>Daily Open Line</h3>
