--- a/index.html
+++ b/index.html
@@ -39,12 +39,9 @@
     <!-- ======================= FEATURED EAs ======================= -->
     <h2>Featured EAs</h2>
     <div class="grid">
-      <!-- 1 -->
       <div class="card">
         <h3>AP London Session Breakout (MT5)</h3>
-        <div class="tags">
-          <span class="tag">Breakout</span><span class="tag">Time-box</span><span class="tag">MT5</span>
-        </div>
+        <div class="tags"><span class="tag">Breakout</span><span class="tag">Time-box</span><span class="tag">MT5</span></div>
         <p>Structured London session range breakouts with session filters, pending-order safety, and validator-clean logic.</p>
         <div class="btns">
           <a class="btn" href="https://www.mql5.com/en/market/product/148680" target="_blank" rel="noopener">Get on MQL5</a>
@@ -52,12 +49,9 @@
         </div>
       </div>
 
-      <!-- 2 -->
       <div class="card">
         <h3>AP InsideBar Breakout (MT5)</h3>
-        <div class="tags">
-          <span class="tag">Price Action</span><span class="tag">Breakout</span><span class="tag">MT5</span>
-        </div>
+        <div class="tags"><span class="tag">Price Action</span><span class="tag">Breakout</span><span class="tag">MT5</span></div>
         <p>Inside-bar detection with smart pending placement and automatic opposite-side cleanup after fills.</p>
         <div class="btns">
           <a class="btn" href="https://www.mql5.com/en/market/product/148713" target="_blank" rel="noopener">Get on MQL5</a>
@@ -65,15 +59,11 @@
         </div>
       </div>
 
-      <!-- 3 -->
       <div class="card">
         <h3>AP ATR Trail Manager (PRO)</h3>
-        <div class="tags">
-          <span class="tag">Risk</span><span class="tag">Trade Manager</span><span class="tag">ATR</span>
-        </div>
+        <div class="tags"><span class="tag">Risk</span><span class="tag">Trade Manager</span><span class="tag">ATR</span></div>
         <p>Multi-symbol ATR trailing with partials, daily loss guard, and calm management for open positions.</p>
         <div class="btns">
-          <!-- TODO: replace REPLACE_ATR_MANAGER_ID with your product ID number -->
           <a class="btn" href="https://www.mql5.com/en/market/product/148700" target="_blank" rel="noopener">Get on MQL5</a>
           <a class="btn ghost" href="./AP_ATR_Trail_Manager_PRO/" target="_blank" rel="noopener">Docs</a>
         </div>
@@ -88,28 +78,26 @@
         <div class="tags"><span class="tag">EA</span><span class="tag">Range</span></div>
         <p>Previous-day range breakout with buffered pending orders and built-in safety checks.</p>
         <div class="btns">
-          <!-- TODO: add product ID -->
           <a class="btn" href="https://www.mql5.com/en/market/product/148688" target="_blank" rel="noopener">Get on MQL5</a>
           <a class="btn ghost" href="./AP%20Previous%20Day%20Breakout/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
 
       <div class="card">
-  <h3>AP Asian Breakout Box (MT5)</h3>
-  <div class="tags"><span class="tag">EA</span><span class="tag">Time-box</span></div>
-  <p>Asian session time-box breakout with configurable hours, buffered pending orders, and optional trend filter.</p>
-  <div class="btns">
-    <a class="btn" href="https://www.mql5.com/en/market/product/148555" target="_blank" rel="noopener">Get on MQL5</a>
-    <a class="btn ghost" href="./Asian%20Breakout%20Box/" target="_blank" rel="noopener">Docs</a>
-  </div>
-</div>
+        <h3>AP Asian Breakout Box (MT5)</h3>
+        <div class="tags"><span class="tag">EA</span><span class="tag">Time-box</span></div>
+        <p>Asian session time-box breakout with configurable hours, buffered pending orders, and optional trend filter.</p>
+        <div class="btns">
+          <a class="btn" href="https://www.mql5.com/en/market/product/148555" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn ghost" href="./Asian%20Breakout%20Box/" target="_blank" rel="noopener">Docs</a>
+        </div>
+      </div>
 
       <div class="card">
         <h3>AP Trade Manager (Lite)</h3>
         <div class="tags"><span class="tag">Utility</span><span class="tag">Manager</span></div>
         <p>Compact trade manager with break-even, partials, and quick-close actions.</p>
         <div class="btns">
-          <!-- TODO: add product ID -->
           <a class="btn" href="https://www.mql5.com/en/market/product/148619" target="_blank" rel="noopener">Get on MQL5</a>
           <a class="btn ghost" href="./AP%20Trade%20Manager/" target="_blank" rel="noopener">Docs</a>
         </div>
@@ -120,7 +108,7 @@
         <div class="tags"><span class="tag">EA</span><span class="tag">BTC</span></div>
         <p>Short-only breakdown with retest entries, volume gate, EMA trend filter, and spread/ATR guards.</p>
         <div class="btns">
-          <!-- TODO: add product ID when published -->
+          <!-- leave placeholder until published -->
           <a class="btn" href="https://www.mql5.com/en/market/product/REPLACE_BTC_BREAKDOWN_ID" target="_blank" rel="noopener">Get on MQL5</a>
           <a class="btn ghost" href="./btc-breakdown.html" target="_blank" rel="noopener">Docs</a>
         </div>
@@ -130,42 +118,27 @@
     <!-- ======================= FREE INDICATORS ======================= -->
     <h2>Free Indicators</h2>
     <div class="grid">
-      <!-- existing two -->
       <div class="card">
-        <!-- AP Session Boxes -->
-<div class="btns">
-  <!-- Free download via MQL5 -->
-  <a class="btn" href="https://www.mql5.com/en/market/product/148712" target="_blank" rel="noopener">Download</a>
-  <!-- Docs on GitHub -->
-  <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/AP_Session_Boxes" target="_blank" rel="noopener">Docs</a>
-</div>
-
-<!-- Candle Countdown (your MQL5 name: Pro Countdown Candle) -->
-<div class="btns">
-  <!-- Free download via MQL5 -->
-  <a class="btn" href="https://www.mql5.com/en/market/product/148541" target="_blank" rel="noopener">Download</a>
-  <!-- Docs on GitHub (note the encoded space) -->
-  <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/candle%20count%20down" target="_blank" rel="noopener">Docs</a>
-</div>
-        
-      <!-- more freebies -->
-      <div class="card">
-        <h3>Daily Open Line</h3>
-        <div class="tags"><span class="tag">Indicator</span><span class="tag">Utility</span></div>
-        <p>Draws the daily open with session-aware styling. Lightweight and neutral.</p>
+        <h3>AP Session Boxes</h3>
+        <div class="tags"><span class="tag">Indicator</span><span class="tag">Sessions</span></div>
+        <p>Clean London/NY/Asia session boxes with custom times, opacity, and lookback. Great for screenshots.</p>
         <div class="btns">
-          <!-- If listed on MQL5, add the ID and change to Get on MQL5 -->
-          <a class="btn ghost" href="./Daily%20open%20line/" target="_blank" rel="noopener">Docs</a>
+          <!-- Free download via MQL5 (ID from your product list) -->
+          <a class="btn" href="https://www.mql5.com/en/market/product/148712" target="_blank" rel="noopener">Download</a>
+          <!-- Docs on GitHub -->
+          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/AP_Session_Boxes" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
 
       <div class="card">
-        <h3>MA Cross Alerts</h3>
-        <div class="tags"><span class="tag">Indicator</span><span class="tag">Signals</span></div>
-        <p>Moving-average cross alerts with on-chart labels and optional notifications.</p>
+        <h3>Pro Countdown Candle</h3>
+        <div class="tags"><span class="tag">Indicator</span><span class="tag">Utility</span></div>
+        <p>Minimal candle time-left display that respects chart theme and stays light on resources.</p>
         <div class="btns">
-          <!-- TODO: add product ID if published -->
-          <a class="btn ghost" href="./MA%20Cross%20Alerts/" target="_blank" rel="noopener">Docs</a>
+          <!-- Free download via MQL5 -->
+          <a class="btn" href="https://www.mql5.com/en/market/product/148541" target="_blank" rel="noopener">Download</a>
+          <!-- Docs on GitHub (note the encoded space) -->
+          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/candle%20count%20down" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
     </div>
@@ -178,9 +151,8 @@
         <div class="tags"><span class="tag">Indicator</span><span class="tag">Levels</span></div>
         <p>Marks prior session/day/week levels with neutral styling for context.</p>
         <div class="btns">
-          <!-- TODO: add product ID -->
-          <a class="btn" href="https://www.mql5.com/en/market/product/REPLACE_PREV_LEVELS_ID" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP%20Previous%20levels/" target="_blank" rel="noopener">Docs</a>
+          <a class="btn" href="https://www.mql5.com/en/market/product/148635" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/AP%20Previous%20levels" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
 
@@ -189,9 +161,8 @@
         <div class="tags"><span class="tag">Indicator</span><span class="tag">BTC/FX</span></div>
         <p>Marks prior HI/LO sweeps and fair-value gaps with clean, optional alerts.</p>
         <div class="btns">
-          <!-- TODO: add product ID -->
-          <a class="btn" href="https://www.mql5.com/en/market/product/REPLACE_LIQ_SWEEP_ID" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./ICT_LiquiditySweep_FVG_MT5/" target="_blank" rel="noopener">Docs</a>
+          <!-- Hide the MQL5 button until published to avoid 404 -->
+          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/ICT_LiquiditySweep_FVG_MT5" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
 
@@ -200,9 +171,28 @@
         <div class="tags"><span class="tag">Indicator</span><span class="tag">ATR</span></div>
         <p>Clean ATR trailing line for discretionary exits or screenshots.</p>
         <div class="btns">
-          <!-- TODO: add product ID -->
-          <a class="btn" href="https://www.mql5.com/en/market/product/REPLACE_ATR_TRAIL_INDICATOR_ID" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP%20ATR%20Trail%20(MT5)/" target="_blank" rel="noopener">Docs</a>
+          <a class="btn" href="https://www.mql5.com/en/market/product/148873" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/AP%20ATR%20Trail%20(MT5)" target="_blank" rel="noopener">Docs</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>MA Cross Alerts</h3>
+        <div class="tags"><span class="tag">Indicator</span><span class="tag">Signals</span></div>
+        <p>Moving-average cross alerts with on-chart labels and optional notifications.</p>
+        <div class="btns">
+          <a class="btn" href="https://www.mql5.com/en/market/product/148553" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/MA%20Cross%20Alerts" target="_blank" rel="noopener">Docs</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>Daily Open Line</h3>
+        <div class="tags"><span class="tag">Indicator</span><span class="tag">Utility</span></div>
+        <p>Draws the daily open with session-aware styling. Lightweight and neutral.</p>
+        <div class="btns">
+          <a class="btn" href="https://www.mql5.com/en/market/product/148547" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/Daily%20open%20line" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
     </div>
@@ -217,4 +207,3 @@
   </footer>
 </body>
 </html>
-
