--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <!-- Free download via MQL5 (ID from your product list) -->
           <a class="btn" href="https://www.mql5.com/en/market/product/148712" target="_blank" rel="noopener">Download</a>
           <!-- Docs on GitHub -->
-          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/AP_Session_Boxes" target="_blank" rel="noopener">Docs</a>
+          <a class="btn ghost" href="./AP_Session_Boxes/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
 
@@ -138,7 +138,7 @@
           <!-- Free download via MQL5 -->
           <a class="btn" href="https://www.mql5.com/en/market/product/148541" target="_blank" rel="noopener">Download</a>
           <!-- Docs on GitHub (note the encoded space) -->
-          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/candle%20count%20down" target="_blank" rel="noopener">Docs</a>
+          <a class="btn ghost" href="./Pro%20Countdown%20Candle/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
     </div>
