--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <p>Clean ATR trailing line for discretionary exits or screenshots.</p>
         <div class="btns">
           <a class="btn" href="https://www.mql5.com/en/market/product/148873" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/AP%20ATR%20Trail%20(MT5)" target="_blank" rel="noopener">Docs</a>
+          <a class="btn ghost" href="./AP%20ATR%20Trail%20(MT5)/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
 
