--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <p>Moving-average cross alerts with on-chart labels and optional notifications.</p>
         <div class="btns">
           <a class="btn" href="https://www.mql5.com/en/market/product/148553" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/MA%20Cross%20Alerts" target="_blank" rel="noopener">Docs</a>
+          <a class="btn ghost" href="./MA%20Cross%20Alerts/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
 
@@ -192,7 +192,7 @@
         <p>Draws the daily open with session-aware styling. Lightweight and neutral.</p>
         <div class="btns">
           <a class="btn" href="https://www.mql5.com/en/market/product/148547" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/Daily%20open%20line" target="_blank" rel="noopener">Docs</a>
+          <a class="btn ghost" href="./Daily%20open%20line/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
     </div>
