--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <p>Marks prior session/day/week levels with neutral styling for context.</p>
         <div class="btns">
           <a class="btn" href="https://www.mql5.com/en/market/product/148635" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="https://github.com/noo0oobep-eng/ap-tools/tree/main/AP%20Previous%20levels" target="_blank" rel="noopener">Docs</a>
+          <a class="btn ghost" href="./AP%20Previous%20levels/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
 
