--- a/AP_BTC_Session_VWAP_Bands/index.html
+++ b/AP_BTC_Session_VWAP_Bands/index.html
@@ -25,7 +25,7 @@ footer{color:var(--muted);text-align:center;padding:28px}
     <div class="btns">
       <!-- if published on MQL5, set the correct ID; otherwise delete this line for now -->
       <a class="btn" href="https://www.mql5.com/en/market/product/149235" target="_blank" rel="noopener">Get on MQL5</a>
-      <a class="ghost btn" href="/" rel="noopener">⬅ Back to Home</a>
+      <a class="btn ghost" href="./AP_BTC_Session_VWAP_Bands/" target="_blank" rel="noopener">Docs</a>
     </div>
 
     <div class="card">
