--- a/AP_BTC_Session_VWAP_Bands/index.html
+++ b/AP_BTC_Session_VWAP_Bands/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>AP_BTC_SESSION_VWAP_BANDS — Docs</title>
+<title>AP Btc Session VWAP Bands MT5 — Docs</title>
 <style>
 :root{--bg:#0b0f14;--card:#121822;--text:#e8eef6;--muted:#9fb0c3;--accent:#58a6ff}
 *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Arial}
@@ -19,13 +19,13 @@ footer{color:var(--muted);text-align:center;padding:28px}
 </head>
 <body>
   <div class="wrap">
-    <h1>AP_BTC_SESSION_VWAP_BANDS</h1>
-    <p class="lead">1-sentence, calm, neutral description in English. No claims.</p>
+    <h1>AP Btc Session VWAP Bands MT5</h1>
+    <p class="lead">Session-based BTC VWAP with upper/lower bands for balanced intraday reference.</p>
 
     <div class="btns">
       <!-- if published on MQL5, set the correct ID; otherwise delete this line for now -->
       <a class="btn" href="https://www.mql5.com/en/market/product/149235" target="_blank" rel="noopener">Get on MQL5</a>
-      <a class="btn ghost" href="./AP_BTC_Session_VWAP_Bands/" target="_blank" rel="noopener">Docs</a>
+      <a class="btn ghost" href="./AP Btc Session VWAP Bands MT5/" target="_blank" rel="noopener">Docs</a>
     </div>
 
     <div class="card">
