--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
       
      <div class="card">
-       <h3>AP_BTC_Session_VWAP_Bands</h3>
+       <h3>AP Btc Session VWAP Bands MT5</h3>
        <div class="tags"><span class="tag">Indicator</span><span class="tag">CATEGORY</span></div>
        <p>Session-based BTC VWAP with upper/lower bands for balanced intraday reference.</p>
        <div class="btns">
