--- a/AP Btc Session VWAP Bands MT5/index.html
+++ b/AP Btc Session VWAP Bands MT5/index.html
@@ -25,7 +25,7 @@ footer{color:var(--muted);text-align:center;padding:28px}
     <div class="btns">
       <!-- if published on MQL5, set the correct ID; otherwise delete this line for now -->
       <a class="btn" href="https://www.mql5.com/en/market/product/149235" target="_blank" rel="noopener">Get on MQL5</a>
-      <a class="btn ghost" href="./AP Btc Session VWAP Bands MT5/" target="_blank" rel="noopener">Docs</a>
+      <a class="btn ghost" href="./AP%20BTC%20Session%20VWAP%20Bands/" target="_blank" rel="noopener">Docs</a>
     </div>
 
     <div class="card">
