--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
       
      <div class="card">
        <h3>AP Btc Session VWAP Bands MT5</h3>
-       <div class="tags"><span class="tag">Indicator</span><span class="tag">CATEGORY</span></div>
-       <p>Session-based BTC VWAP with upper/lower bands for balanced intraday reference.</p>
+       <div class="tags"><span class="tag">Indicator</span><span class="tag">BTC</span></div>
+       <p>Session-based BTC VWAP with optional ±1/±2 bands for balanced intraday reference.</p>
        <div class="btns">
-         <!-- for freebies, keep downloads on MQL5 to stay compliant -->
          <a class="btn" href="https://www.mql5.com/en/market/product/149235" target="_blank" rel="noopener">Download</a>
-         <a class="btn ghost" href="./PRODUCT%20NAME/" target="_blank" rel="noopener">Docs</a>
+         <a class="btn ghost" href="./AP%20Btc%20Session%20VWAP%20Bands%20MT5/" target="_blank" rel="noopener">Docs</a>
        </div>
      </div>
+
 
       <div class="card">
         <h3>Pro Countdown Candle</h3>
