--- a/AP Btc Session VWAP Bands MT5/index.html
+++ b/AP Btc Session VWAP Bands MT5/index.html
@@ -27,9 +27,8 @@ hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
   <p class="lead">Session/anchored VWAP with ±1/±2 bands and clean visuals. English only; support via MQL5 messages/comments.</p>
 
   <div class="btns">
-    <!-- MQL5 product ID (from your screenshot it is 149235) -->
     <a class="btn" href="https://www.mql5.com/en/market/product/149235" target="_blank" rel="noopener">Get on MQL5</a>
-    <a class="ghost btn" href="README.md" target="_blank" rel="noopener">Quick Start</a>
+    <a class="ghost btn" href="Quick_Start.md" target="_blank" rel="noopener">Quick Start</a>
   </div>
 
   <div class="card">
@@ -54,19 +53,17 @@ hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
 
   <div class="card">
     <h3>Screenshots</h3>
-    <!-- Rename your images to vwap-01.png / vwap-02.png if you can.
-         If not, change src to the exact uploaded filenames (URL-encode spaces). -->
-    <img src="vwap-01.png" alt="VWAP on-chart example" />
+    <img src="Screenshot%20(1752).png" alt="VWAP on-chart example" />
     <br><br>
-    <img src="vwap-02.png" alt="Inputs panel" />
+    <img src="Screenshot%20(1753).png" alt="Inputs panel" />
   </div>
 
   <div class="card">
     <h3>Files in this folder</h3>
     <ul>
-      <li><code>README.md</code> – quick start and input notes</li>
+      <li><code>Quick_Start.md</code> – quick start and input notes</li>
       <li><code>Pinned comment AP BTC Session VWAP ....txt</code> – short MQL5 pinned comment</li>
-      <li><code>Version.txt</code> – version tag</li>
+      <li><code>Version</code> (or <code>Version.txt</code>) – version tag</li>
       <li><code>VWAP_Anchor_0800_StdBands.set</code> – sample preset</li>
       <li><code>VWAP_Daily_Default.set</code> – sample preset</li>
       <li>PNG screenshots for the Market page</li>
