--- a/AP Btc Session VWAP Bands MT5/index.html
+++ b/AP Btc Session VWAP Bands MT5/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<meta name="description" content="Session/anchored VWAP for BTC with ±1/±2 bands and clean visuals. Lightweight, screenshot-friendly, and free on MQL5." />
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>AP Btc Session VWAP Bands MT5 — Docs</title>
@@ -27,9 +28,10 @@ hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
   <p class="lead">Session/anchored VWAP with ±1/±2 bands and clean visuals. English only; support via MQL5 messages/comments.</p>
 
   <div class="btns">
-    <a class="btn" href="https://www.mql5.com/en/market/product/149235" target="_blank" rel="noopener">Get on MQL5</a>
-    <a class="ghost btn" href="Quick_Start.md" target="_blank" rel="noopener">Quick Start</a>
-  </div>
+  <a class="btn" href="https://www.mql5.com/en/market/product/149235" target="_blank" rel="noopener">Get on MQL5</a>
+  <a class="ghost btn" href="README.md" target="_blank" rel="noopener">Quick Start</a>
+  <a class="ghost btn" href="Pinned%20comment%20AP%20BTC%20Session%20VWAP%20....txt" target="_blank" rel="noopener">Pinned Comment</a>
+</div>
 
   <div class="card">
     <h3>What it does</h3>
@@ -50,6 +52,19 @@ hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
     </ol>
     <p class="muted">Tip: For screenshots, set a gentle opacity and slightly thicker line width.</p>
   </div>
+  
+<div class="card">
+  <h3>Downloads</h3>
+  <div class="btns">
+    <a class="btn" href="VWAP_Anchor_0800_StdBands.set" download>
+      Anchor Preset (.set)
+    </a>
+    <a class="btn" href="VWAP_Daily_Default.set" download>
+      Daily Preset (.set)
+    </a>
+  </div>
+  <small class="muted">If your browser opens the file as text, right-click → “Save link as…”.</small>
+</div>
 
   <div class="card">
     <h3>Screenshots</h3>
