--- a/index.html
+++ b/index.html
@@ -139,7 +139,16 @@
          <a class="btn ghost" href="./AP%20Btc%20Session%20VWAP%20Bands%20MT5/" target="_blank" rel="noopener">Docs</a>
        </div>
      </div>
-
+      
+     <div class="card">
+       <h3>AP BTC Spread Radar MT5</h3>
+       <div class="tags"><span class="tag">Indicator</span><span class="tag">BTC</span><span class="tag">Spread</span></div>
+       <p>Shows live spread (pts) with an MA baseline — quick broker/volatility check before trading.</p>
+       <div class="btns">
+         <a class="btn" href="https://www.mql5.com/en/market/product/REPLACE_SPREAD_RADAR_ID" target="_blank" rel="noopener">Get on MQL5</a>
+         <a class="btn ghost" href="./AP%20BTC%20Spread%20Radar%20MT5/" target="_blank" rel="noopener">Docs</a>
+       </div>
+     </div>
 
       <div class="card">
         <h3>Pro Countdown Candle</h3>
