--- a/AP BTC Spread Radar MT5/index.html
+++ b/AP BTC Spread Radar MT5/index.html
@@ -56,12 +56,12 @@ hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
   </div>
 
   <div class="card">
-    <h3>Screenshots</h3>
-    <!-- Rename uploaded images if needed and update src paths accordingly -->
-    <img src="spread-01.png" alt="Spread radar on chart" />
-    <br><br>
-    <img src="spread-02.png" alt="Inputs panel" />
-  </div>
+  <h3>Screenshots</h3>
+  <img src="./spread-01.png" alt="Spread radar on chart" />
+  <br><br>
+  <img src="./spread-02.png" alt="Inputs panel" />
+</div>
+
 
   <div class="card">
     <h3>Files in this folder</h3>
