--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
           <a class="btn ghost" href="./insidebar-breakout/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
+      
+      <div class="card">
+        <h3>AP London Breakout PRO (MT5)</h3>
+        <div class="tags"><span class="tag">Breakout</span><span class="tag">London</span><span class="tag">MT5</span></div>
+        <p>07:00–08:00 (server) box breakout via pending orders. SL at opposite side (+extra), TP by R-multiple. One set per window, validator-safe gates.</p>
+        <div class="btns">
+          <a class="btn" href="https://www.mql5.com/en/market/product/148704" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn ghost" href="./AP_London_Breakout_PRO/" target="_blank" rel="noopener">Docs</a>
+        </div>
+      </div>
 
       <div class="card">
         <h3>AP ATR Trail Manager (PRO)</h3>
