--- a/AP_London_Breakout_PRO/index.html
+++ b/AP_London_Breakout_PRO/index.html
@@ -72,6 +72,9 @@ hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
     <img src="lbx-01.png" alt="London box and pending orders" />
     <br><br>
     <img src="lbx-02.png" alt="Inputs panel" />
+    <img src="lbx-03.png" alt="London box and pending" />
+    <br><br>
+    <img src="lbx-04.png" alt="Inputs" />
   </div>
 
   <div class="card">
