--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AP Trading Tools – Expert Advisors & Indicators</title>
+  <!-- Social share previews (Open Graph + Twitter) -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="AP Trading Tools">
+  <meta property="og:title" content="AP Trading Tools — MT5 EAs & Indicators">
+  <meta property="og:description" content="Clean code, validator-safe, trader-friendly tools for MT5.">
+  <meta property="og:url" content="https://aptradingtools.com/">
+  <meta property="og:image" content="https://aptradingtools.com/assets/og-card.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AP Trading Tools — MT5 EAs & Indicators">
+  <meta name="twitter:description" content="Clean code, validator-safe, trader-friendly tools for MT5.">
+  <meta name="twitter:image" content="https://aptradingtools.com/assets/og-card.png">
   <style>
     :root{--bg:#0b0f14;--card:#121822;--text:#e8eef6;--muted:#9fb0c3;--accent:#58a6ff;}
     *{box-sizing:border-box}
