--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
   <meta name="twitter:title" content="AP Trading Tools — MT5 EAs & Indicators">
   <meta name="twitter:description" content="Clean code, validator-safe, trader-friendly tools for MT5.">
   <meta name="twitter:image" content="https://aptradingtools.com/assets/og-card.png">
+  <!-- Favicons -->
+<link rel="icon" href="/assets/favicon.png?v=1" type="image/png">
+<link rel="shortcut icon" href="/assets/favicon.png?v=1" type="image/png">
+
+<!-- Canonical URL (homepage) -->
+<link rel="canonical" href="https://aptradingtools.com/">
+
+<!-- SEO description -->
+<meta name="description" content="MT5 Expert Advisors & Indicators — clean code, validator-safe, trader-friendly.">
+
   <style>
     :root{--bg:#0b0f14;--card:#121822;--text:#e8eef6;--muted:#9fb0c3;--accent:#58a6ff;}
     *{box-sizing:border-box}
