--- a/index.html
+++ b/index.html
@@ -90,6 +90,24 @@
           <a class="btn ghost" href="./AP_London_Breakout_PRO/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
+      
+      <!-- AP Oil Navigator PRO (MT5) — product card -->
+<article class="product-card" style="border:1px solid #e5e7eb;border-radius:14px;overflow:hidden;display:flex;flex-direction:column">
+  <img src="assets/oil-nav/card.png" alt="AP Oil Navigator PRO (MT5)" style="width:100%;aspect-ratio:16/9;object-fit:cover">
+  <div style="padding:14px">
+    <h3 style="margin:0 0 6px;font:600 18px/1.3 system-ui,Segoe UI,Roboto">AP Oil Navigator PRO (MT5)</h3>
+    <p style="margin:0 0 10px;color:#64748b">Trend+pullback for XTIUSD/USOIL on M30. ATR SL/TP, pending expiry, validator-safe.</p>
+    <div style="display:flex;gap:8px;flex-wrap:wrap;margin-bottom:10px">
+      <span style="font:12px/1 system-ui;padding:6px 10px;border:1px solid #e5e7eb;border-radius:999px;background:#f8fafc">MT5</span>
+      <span style="font:12px/1 system-ui;padding:6px 10px;border:1px solid #e5e7eb;border-radius:999px;background:#f8fafc">XTIUSD / USOIL</span>
+      <span style="font:12px/1 system-ui;padding:6px 10px;border:1px solid #e5e7eb;border-radius:999px;background:#f8fafc">M30</span>
+    </div>
+    <div style="display:flex;gap:10px">
+      <a href="docs/ap-oil-navigator-pro-mt5/" class="btn" style="text-decoration:none;background:#111827;color:#fff;padding:10px 12px;border-radius:10px">Docs</a>
+      <a href="https://www.mql5.com/en/market/product/148909" class="btn" style="text-decoration:none;border:1px solid #e5e7eb;padding:10px 12px;border-radius:10px;color:#111827">MQL5</a>
+    </div>
+  </div>
+</article>
 
       <div class="card">
         <h3>AP ATR Trail Manager (PRO)</h3>
