--- a/AP Oil Navigator PRO MT5/index.html
+++ b/AP Oil Navigator PRO MT5/index.html
@@ -103,7 +103,7 @@
       </section>
 
       <aside class="card">
-        <img src="/assets/oil-nav/hero.png" alt="AP Oil Navigator PRO" style="width:100%;border-radius:8px;margin-bottom:12px">
+        <img src="/assets/oil-nav/Screenshot 1627" alt="AP Oil Navigator PRO" style="width:100%;border-radius:8px;margin-bottom:12px">
         <h3>Recommended</h3>
         <ul>
           <li>Symbol: <strong>XTIUSD/USOIL</strong></li>
