--- a/index.html
+++ b/index.html
@@ -114,7 +114,17 @@
           <a class="btn ghost" href="./AP%20Previous%20Day%20Breakout/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
-
+      
+      <div class="card">
+        <h3>AP Oil Navigator PRO (MT5)</h3>
+        <div class="tags"><span class="tag">EA</span><span class="tag">Oil</span></div>
+        <p>Trend+pullback for XTIUSD/USOIL on M30. ATR SL/TP, pending expiry, validator-safe.</p>
+        <div class="btns">
+          <a class="btn" href="https://www.mql5.com/en/market/product/148909" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn ghost" href="./AP%20Oil%20Navigator%20PRO%20MT5/" target="_blank" rel="noopener">Docs</a>
+        </div>
+      </div>
+      
       <div class="card">
         <h3>AP Asian Breakout Box (MT5)</h3>
         <div class="tags"><span class="tag">EA</span><span class="tag">Time-box</span></div>
