--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
       
       <div class="card">
         <h3>AP Oil Navigator PRO (MT5)</h3>
-        <div class="tags"><span class="tag">EA</span><span class="tag">Oil</span></div>
-        <p>Trend+pullback for XTIUSD/USOIL on M30. ATR SL/TP, pending expiry, validator-safe.</p>
+        <div class="tags"><span class="tag">MT5</span><span class="tag">XTIUSD/USOIL</span><span class="tag">M30</span></div>
+        <p>Trend+pullback for XTIUSD/USOIL on M30. ATR SL/TP, pending expiry, validator-safe gates.</p>
         <div class="btns">
           <a class="btn" href="https://www.mql5.com/en/market/product/148909" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP%20Oil%20Navigator%20PRO%20MT5/" target="_blank" rel="noopener">Docs</a>
+          <a class="btn ghost" href="./AP_Oil_Navigator_PRO_MT5/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
       
