--- a/AP Oil Navigator PRO MT5/index.html
+++ b/AP Oil Navigator PRO MT5/index.html
@@ -3,41 +3,145 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AP Oil Navigator PRO (MT5) — Docs</title>
-  <meta name="description" content="Trend+pullback EA for XTIUSD/USOIL on M30. ATR SL/TP, pending expiry, validator-safe.">
-  <link rel="canonical" href="https://aptradingtools.com/AP%20Oil%20Navigator%20PRO%20MT5/">
+  <title>AP Oil Navigator PRO (MT5)</title>
+  <meta name="description" content="AP Oil Navigator PRO (MT5) — trend+pullback for XTIUSD/USOIL on M30 with ATR SL/TP, pending expiry, and validator-safe gates." />
+  <link rel="icon" href="/assets/favicon.png" type="image/png">
+  <style>
+    :root{--bg:#0b0f14;--card:#121822;--text:#e8eef6;--muted:#9fb0c3;--accent:#58a6ff;--border:#1d2633}
+    *{box-sizing:border-box}
+    body{margin:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Arial}
+    .wrap{max-width:1100px;margin:0 auto;padding:28px 18px}
+    a{color:var(--accent);text-decoration:none}
+    .back{display:inline-block;background:#0e141d;border:1px solid var(--border);color:var(--muted);padding:8px 12px;border-radius:10px}
+    h1{margin:14px 0 10px;font-size:32px}
+    .pillbar{display:flex;gap:10px;flex-wrap:wrap;margin:14px 0 22px}
+    .pill{display:inline-block;background:var(--accent);color:#000;padding:8px 12px;border-radius:999px;font-weight:600}
+    .pill.ghost{background:transparent;color:var(--accent);border:1px solid var(--accent)}
+    .panel{background:var(--card);border:1px solid var(--border);border-radius:14px;padding:18px;margin:16px 0}
+    h3{margin:0 0 10px;font-size:18px}
+    ul{margin:8px 0 0 18px}
+    code, .mono{font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace}
+    .grid-2{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:14px}
+    table{width:100%;border-collapse:collapse}
+    th,td{border-bottom:1px solid var(--border);padding:8px 6px;text-align:left;font-size:14px}
+    .shots{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px}
+    .shots img{width:100%;height:auto;border-radius:10px;border:1px solid var(--border);background:#0e141d}
+    .muted{color:var(--muted)}
+  </style>
 </head>
-<body style="max-width:900px;margin:40px auto;padding:0 16px;font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Arial;color:#e8eef6;background:#0b0f14">
-  <h1 style="margin:0 0 8px">AP Oil Navigator PRO (MT5)</h1>
-  <p style="color:#9fb0c3">Trend + pullback for XTIUSD/USOIL on M30. ATR-based SL/TP, session/news guards, pending expiry, and validator-safe order flow.</p>
-  <hr style="border:0;border-top:1px solid #1d2633;margin:18px 0">
+<body>
+  <div class="wrap">
+    <a class="back" href="/"><span>←</span> Back to Home</a>
+    <h1>AP Oil Navigator PRO (MT5)</h1>
+    <p class="muted">Trend+pullback for XTIUSD/USOIL on M30 with ATR SL/TP, pending-order expiry, and validator-friendly safety gates.</p>
 
-  <h2>Quick start</h2>
-  <ol>
-    <li>Attach to <strong>XTIUSD</strong> or <strong>USOIL</strong> on <strong>M30</strong>.</li>
-    <li>Defaults are fine; typical: <code>ATR SL=2.0</code>, <code>TP R=1.5</code>, session 13:00–22:59 (server).</li>
-    <li>Set <code>MaxSpreadPoints</code> for your broker; choose fixed lots or % risk.</li>
-  </ol>
+    <div class="pillbar">
+      <a class="pill" href="https://www.mql5.com/en/market/product/REPLACE_OIL_NAV_ID" target="_blank" rel="noopener">Get on MQL5</a>
+      <a class="pill ghost" href="./Quick%20Start.md" target="_blank" rel="noopener">Quick Start</a>
+      <a class="pill ghost" href="#inputs">Inputs</a>
+      <a class="pill ghost" href="./AP_Oil_Navigator_PRO_MT5.set" target="_blank" rel="noopener">Preset (.set)</a>
+      <a class="pill ghost" href="#version">Version</a>
+    </div>
 
-  <h2>Screenshots</h2>
-  <p style="color:#9fb0c3">Place your 4 PNGs at <code>/assets/products/oil-navigator/shot-1.png</code> … <code>shot-4.png</code> and they’ll show below.</p>
-  <div style="display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:12px">
-    <img src="/assets/products/oil-navigator/shot-1.png" alt="Setup" style="width:100%;border:1px solid #1d2633;border-radius:10px">
-    <img src="/assets/products/oil-navigator/shot-2.png" alt="Inputs" style="width:100%;border:1px solid #1d2633;border-radius:10px">
-    <img src="/assets/products/oil-navigator/shot-3.png" alt="Backtest" style="width:100%;border:1px solid #1d2633;border-radius:10px">
-    <img src="/assets/products/oil-navigator/shot-4.png" alt="Orders" style="width:100%;border:1px solid #1d2633;border-radius:10px">
+    <div class="panel">
+      <h3>What it does</h3>
+      <ul>
+        <li><strong>Signal on M30:</strong> fast/slow EMA trend + pullback breakout using prior bar high/low with entry buffer.</li>
+        <li><strong>ATR-based exits:</strong> SL = <span class="mono">ATR × SL_Mult</span>; TP = R-multiple of risk.</li>
+        <li><strong>Bias:</strong> auto (swap-aware) or forced long/short/both.</li>
+        <li><strong>Risk:</strong> fixed lots or % balance with point-value math and true min/step rounding.</li>
+        <li><strong>Safety:</strong> session window, optional news pause window, spread cap, daily loss guard.</li>
+        <li><strong>Order flow:</strong> one attempt per completed bar, one working pending at a time, pendings auto-expire.</li>
+        <li><strong>Validator-safe:</strong> live symbol restriction; tester allows any symbol + fallback entry if indicators not ready.</li>
+      </ul>
+    </div>
+
+    <div class="panel">
+      <h3>How it trades</h3>
+      <ol>
+        <li>During the session window, on each <strong>new M30 bar</strong> the EA reads fast/slow EMA and optional ATR.</li>
+        <li>If trend is up (fast&gt;slow) it places a <strong>Buy Stop</strong> above previous bar high (+buffer). If down, a <strong>Sell Stop</strong> below previous low (-buffer).</li>
+        <li>SL from ATR; TP by R-multiple. Stops are normalized to tick size and checked against broker stops level.</li>
+        <li>Only one working pending is allowed; pendings expire after <span class="mono">InpPendingExpiryHours</span>.</li>
+        <li>Daily equity guard pauses new orders after loss cap; spread &amp; news/session gates must be OK.</li>
+      </ol>
+      <p class="muted">Tester mode keeps logic but relaxes gates (optional) and enables a simple fallback entry if MA/ATR are not ready immediately.</p>
+    </div>
+
+    <div id="inputs" class="panel">
+      <h3>Inputs (key)</h3>
+      <div class="grid-2">
+        <div>
+          <table>
+            <tr><th>Core</th><th>Default</th></tr>
+            <tr><td>M30 timeframe (<span class="mono">InpTF</span>)</td><td class="mono">PERIOD_M30</td></tr>
+            <tr><td>Fast/Slow EMA</td><td class="mono">20 / 200</td></tr>
+            <tr><td>ATR period / SL mult / TP R</td><td class="mono">14 / 2.0 / 1.5</td></tr>
+            <tr><td>Entry buffer (pts)</td><td class="mono">30</td></tr>
+          </table>
+        </div>
+        <div>
+          <table>
+            <tr><th>Risk &amp; Safety</th><th>Default</th></tr>
+            <tr><td>Lots: fixed or % risk</td><td class="mono">0.01 or 0.5%</td></tr>
+            <tr><td>Max spread (pts)</td><td class="mono">120</td></tr>
+            <tr><td>Max open positions</td><td class="mono">3</td></tr>
+            <tr><td>Daily loss stop</td><td class="mono">5% (money=0)</td></tr>
+          </table>
+        </div>
+      </div>
+      <div class="grid-2">
+        <div>
+          <table>
+            <tr><th>Time filters</th><th>Default</th></tr>
+            <tr><td>Session start–end</td><td class="mono">13:00 → 22:59 (server)</td></tr>
+            <tr><td>News pause (day/time ±mins)</td><td class="mono">Wed 14:30 ±30m</td></tr>
+          </table>
+        </div>
+        <div>
+          <table>
+            <tr><th>Validator/Test</th><th>Default</th></tr>
+            <tr><td>Restrict to oil symbols (live)</td><td class="mono">true</td></tr>
+            <tr><td>Allowed tokens</td><td class="mono">XTI, USOIL, WTI, OIL</td></tr>
+            <tr><td>Tester relax gates / fallback</td><td class="mono">true / true</td></tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel">
+      <h3>Validator &amp; safety notes</h3>
+      <ul>
+        <li>No DLL/WebRequest. Uses <span class="mono">OrderCheck</span>, stops-level and margin checks before sending.</li>
+        <li>Symbol guard in live accounts: only symbols containing the allowed tokens are traded (configurable).</li>
+        <li>One attempt per completed bar; pending orders use <span class="mono">ORDER_TIME_SPECIFIED</span> for auto-expiry.</li>
+        <li>All prices/lots normalized to broker tick size &amp; step; pending prices and SL/TP respect stops/freeze.</li>
+      </ul>
+    </div>
+
+    <div class="panel">
+      <h3>Screenshots</h3>
+      <div class="shots">
+        <!-- drop your four images into this folder and name them s1.png .. s4.png (or update names below) -->
+        <img src="./shot-1.png" alt="Backtest equity curve & report">
+        <img src="./shot-2.png" alt="Trade list / fills">
+        <img src="./shot-3.png" alt="Inputs tab">
+        <img src="./shot-4.png" alt="Journal / placements">
+      </div>
+    </div>
+
+    <div id="version" class="panel">
+      <h3>Version</h3>
+      <p><strong>v1.2</strong> — initial public release.</p>
+    </div>
+
+    <div class="panel">
+      <h3>Files in this folder</h3>
+      <ul>
+        <li><a href="./Quick%20Start.md" target="_blank" rel="noopener">Quick Start.md</a></li>
+        <li><a href="./AP_Oil_Navigator_PRO_MT5.set" target="_blank" rel="noopener">AP_Oil_Navigator_PRO_MT5.set</a> <span class="muted">(optional preset)</span></li>
+      </ul>
+    </div>
   </div>
-
-  <h2>Key inputs</h2>
-  <ul>
-    <li><strong>Trend:</strong> Fast/Slow MA (EMA), ATR period.</li>
-    <li><strong>Entries:</strong> Buffered stop above/below previous bar in trend direction.</li>
-    <li><strong>Stops/TP:</strong> ATR multiples (fallback if ATR unavailable).</li>
-    <li><strong>Protection:</strong> Max spread, per-bar throttle, daily loss guard, one set per bar.</li>
-    <li><strong>Validation:</strong> Live symbol restriction; tester fallbacks/gates.</li>
-  </ul>
-
-  <hr style="border:0;border-top:1px solid #1d2633;margin:24px 0">
-  <p><a href="https://www.mql5.com/en/market/product/148909" target="_blank" rel="noopener" style="color:#58a6ff">Get on MQL5</a></p>
 </body>
 </html>
