--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <p>Trend+pullback for XTIUSD/USOIL on M30. ATR SL/TP, pending expiry, validator-safe gates.</p>
         <div class="btns">
           <a class="btn" href="https://www.mql5.com/en/market/product/148909" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP_Oil_Navigator_PRO_MT5/" target="_blank" rel="noopener">Docs</a>
+          <a class="btn ghost" href="./AP%20Oil%20Navigator%20PRO%20MT5/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
       
