--- a/AP Oil Navigator PRO MT5/index.html
+++ b/AP Oil Navigator PRO MT5/index.html
@@ -107,7 +107,19 @@
           </table>
         </div>
       </div>
+      
     </div>
+     <div class="btns">
+  <a class="btn ghost" href="/AP_Oil_Navigator_PRO/presets/AP_Oil_Navigator_PRO__Balanced.set" download>
+    Balanced (.set)
+  </a>
+  <a class="btn ghost" href="/AP_Oil_Navigator_PRO/presets/AP_Oil_Navigator_PRO__Conservative.set" download>
+    Conservative (.set)
+  </a>
+  <a class="btn ghost" href="/AP_Oil_Navigator_PRO/presets/AP_Oil_Navigator_PRO__Tester_Relaxed.set" download>
+    Tester (relaxed) (.set)
+  </a>
+</div>
 
     <div class="panel">
       <h3>Validator &amp; safety notes</h3>
