--- a/AP Oil Navigator PRO MT5/index.html
+++ b/AP Oil Navigator PRO MT5/index.html
@@ -110,13 +110,13 @@
       
     </div>
      <div class="btns">
-  <a class="btn ghost" href="/AP%20Oil%20Navigator%20PRO/presets/AP_Oil_Navigator_PRO__Balanced.set" download>
+  <a class="btn ghost" href="/AP_Oil_Navigator_PRO/presets/AP_Oil_Navigator_PRO__Balanced.set" download>
     Balanced (.set)
   </a>
-  <a class="btn ghost" href="/AP%20Oil%20Navigator%20PRO/presets/AP_Oil_Navigator_PRO__Conservative.set" download>
+  <a class="btn ghost" href="/AP_Oil_Navigator_PRO/presets/AP_Oil_Navigator_PRO__Conservative.set" download>
     Conservative (.set)
   </a>
-  <a class="btn ghost" href="/AP%20Oil%20Navigator%20PRO/presets/AP_Oil_Navigator_PRO__Tester_Relaxed.set" download>
+  <a class="btn ghost" href="/AP_Oil_Navigator_PRO/presets/AP_Oil_Navigator_PRO__Tester_Relaxed.set" download>
     Tester (relaxed) (.set)
   </a>
 </div>
